--- a/ZeldaOOP.Core/ZeldaOOP.Core.csproj
+++ b/ZeldaOOP.Core/ZeldaOOP.Core.csproj
@@ -8,4 +8,8 @@
     <Folder Include="F3DZEX\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.0" />
+  </ItemGroup>
+
 </Project>
